# masonry-cc

./: CMakeLists.txt  LICENSE  LICENSE.txt  README.md
qAutoSeg/: CMakeLists.txt  LICENSE.txt  info.json  profileImportDlg.cpp  profileImportDlg.h  profileImportDlg.ui  qAutoSeg.cpp  qAutoSeg.h  qAutoSeg.qrc
qManualSeg/: CMakeLists.txt  info.json  profileImportDlg.cpp  profileImportDlg.h  qManualSeg.cpp  qManualSeg.h  qManualSeg.qrc
v1.2/translations/: CloudCompare_fr.qm  CloudCompare_ja.qm  CloudCompare_pt.qm  CloudCompare_ru.qm
